@@startuml

abstract class Entity {
    # inventory : inventory_items
}

class Human {
    # equipped : equipped_items
}

class Witcher {
    - signs : signs 
}

class Ghoul {

}

abstract class Item {

}

abstract class Weapon {

}

class Sword {

}

class Armor {

}

abstract class Spell {

}

abstract class Signs {

}

class Igni {

}

class Battle {
    - allies[] : Entity*
    - enemies[] : Entity*
    - deads[] : Entity*
    - floor_items[] : Item*
}

struct inventory_items {
    swords[] : Sword*
    armors[] : Armor*
}

struct equipped_items {
    sword : Sword*
    armor : Armor*
}

struct signs {
    igni : Igni*
}

class Date {

}

Entity <|-- Human
Entity <|-- Ghoul
Human <|-- Witcher

Item <|-- Weapon
Item <|-- Armor
Weapon <|-- Sword

Spell <|-- Signs
Signs <|-- Igni

Entity *-- Date
Entity *-- inventory_items

Human *-- equipped_items

Witcher *-- signs

signs o-- Igni

inventory_items o-- Sword
inventory_items o-- Armor

Battle o-- Entity
Battle o-- Item

@@enduml